--- a/microservice-vue/src/assets/css/main.css
+++ b/microservice-vue/src/assets/css/main.css
@@ -91,6 +91,10 @@ a {
     margin-right: 0.2vw;
 }
 
+.mr4 {
+    margin-right: 0.4vw;
+}
+
 .move-enter-active,
 .move-leave-active {
     transition: opacity .1s ease;
