--- a/microservice-vue/src/assets/css/main.css
+++ b/microservice-vue/src/assets/css/main.css
@@ -25,7 +25,7 @@ a {
     position: absolute;
     left: 210px;
     right: 0;
-    top: 70px;
+    top: 50px;
     bottom: 0;
     padding-bottom: 30px;
     -webkit-transition: left .3s ease-in-out;
@@ -36,7 +36,7 @@ a {
 .content {
     width: auto;
     height: 100%;
-    padding: 10px;
+    padding: 0 10px 5px 10px;
     overflow-y: auto;
     box-sizing: border-box;
 }
@@ -46,7 +46,7 @@ a {
 }
 
 .aac-container {
-    padding: 30px;
+    padding: 10px;
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
